<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- LABELS -->
    <string name="app_name">The Resistance: Avalon</string>
    <string name="setup">Set Up New Game</string>
    <string name="HowToPlay">How To Play</string>
    <string name="title_activity_instructions">How to Play</string>
    <string name="title_activity_game_setup">Set up a new Game</string>
    <string name="title_activity_enter_player_names">Enter Player Names</string>
    <string name="HowMany">Select Number of Players</string>
    <string name="enterNames">Enter Player Names</string>
    <string name="nameHolder">Player Name</string>
    <string name="motiveHolder">You are ...</string>
    <string name="roundOne">Round 1</string>
    <string name="roundTwo">Round 2</string>
    <string name="roundThree">Round 3</string>
    <string name="roundFour">Round 4</string>
    <string name="roundFive">Round 5</string>

    <!--HINTS-->
    <string name="player_name">Player\'s Name</string>

    <!-- BUTTONS -->
    <string name="start_game">Start New Game</string>
    <string name="instructions">How to Play</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="submit">Submit</string>
    <string name="title_activity_reveal_players">Revealing Players</string>
    <string name="ready">Ready to Reveal</string>
    <string name="title_activity_round_summary">Quest Summary</string>
    <string name="title_activity_round_one">Round 1</string>
    <string name="beginRound">Begin Round</string>
    <string name="title_activity_round_two">Round 2</string>
    <string name="title_activity_round_three">Round 3</string>
    <string name="title_activity_round_four">Round 4</string>
    <string name="title_activity_round_five">Round 5y</string>
    <string name="title_activity_assemble_team">Pick your Team</string>
    <string name="questLeader">The Quest Leader is </string>
    <string name="proposeTeam">Propose this Team</string>
    <string name="title_activity_team_vote">Vote on Proposed Team</string>
    <string name="teamSize">Please select</string>
    <string name="vote">Are ok with this team?</string>
    <string name="explanation">Check the box to pass the team.</string>
    <string name="proposedTeam">The proposed team is: </string>
    <string name="team">...</string>
    <string name="title_activity_game_over">Game Over</string>
    <string name="failed_message">The team has been rejected. Press OK to continue.</string>
    <string name="failed_title">VOTE FAILED</string>
    <string name="passed_title">VOTE PASSED</string>
    <string name="passed_message">The team has been approved. Press OK to continue.</string>
    <string name="ok">OK</string>
    <string name="title_activity_quest_vote">Vote on the Quest</string>
    <string name="voter_explanation">Please cast your votes.</string>
    <string name="current_voter">Current Voter: </string>
    <string name="ready_to_vote">Ready to Vote</string>
    <string name="vote_message">Please select your vote.</string>
    <string name="pass">PASS</string>
    <string name="fail">FAIL</string>
    <string name="round">Round Over</string>
    <string name="nextRound">Next Round</string>
    <string name="gameOver">GAME OVER</string>
    <string name="winners">The have won!</string>
    <string name="mainMenu">Main Menu</string>


</resources>
