<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linear3"
    tools:context="com.lcbs.theresistanceavalon.TeamVoteActivity"
    android:background="@drawable/background1"
    android:weightSum="1">

    <TextView
        android:id="@+id/proposed_team_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="70dp"
        android:text="@string/proposedTeam"
        android:textColor="#C5A495"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/team_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="10dp"
        android:text="@string/team"
        android:textColor="#C5A495"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/explanation_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="10dp"
        android:text="@string/explanation"
        android:textColor="#C5A495"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
