<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lcbs.theresistanceavalon.QuestVoteActivity"
    android:id="@+id/linear4"
    android:background="@drawable/background1"
    android:weightSum="1">

    <TextView
        android:id="@+id/voter_explanation_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="220dp"
        android:text="@string/voter_explanation"
        android:textColor="#C5A495"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/current_voter_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="20dp"
        android:text="@string/current_voter"
        android:textColor="#C5A495"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/ready_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:onClick="openVote"
        android:background="#f3d28f"
        android:textColor="#433022"
        android:text="@string/ready_to_vote"/>

</LinearLayout>
